--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
             - name: Update system and install dependencies
               run: |
                   pacman -Syu --noconfirm
-                  pacman -S --noconfirm base-devel git nodejs npm rust webkit2gtk-4.1 gtk3 libayatana-appindicator patchelf librsvg
+                  pacman -S --noconfirm base-devel git nodejs npm rustup webkit2gtk-4.1 gtk3 libayatana-appindicator patchelf librsvg
 
             - name: Checkout repository
               uses: actions/checkout@v4
