Fix formatting in dependabot.yml and update AUR PKGBUILD generation in build.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
                   - '*'
       ignore:
           - dependency-name: 'eslint'
-            versions: '>= 9'
+            versions: ['>= 9']
 
     # Enable version updates for rust
     - package-ecosystem: 'cargo'
