Add tauriScript configuration to Tauri app build step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,3 +64,5 @@ jobs:
                   releaseDraft: true
                   prerelease: false
                   args: ${{ matrix.args }}
+                  tauriScript: NO_STRIP=true pnpm
+
