feat: Implement hero management with caching and avatar loading
- Added `useHeroes` hook for managing hero state, loading avatars, and discovering skins.
- Introduced `AppHistoryStore` for persisting project history.
- Created `AppSettingStore` for application settings management.
- Developed `FileExplorerStore` for handling file system interactions and directory watching.
- Established `ProjectStore` for managing project-related state and caching heroes.
- Defined types for file nodes and Tauri commands in `tauri.ts`.
- Implemented a logging utility for structured logging and error tracking.
- Added constants for application configuration in `consts.ts`.

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,5 +10,14 @@
 	"arrowParens": "avoid",
 	"endOfLine": "lf",
 	"quoteProps": "as-needed",
-	"jsxSingleQuote": true
+	"jsxSingleQuote": true,
+	"plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
+	"overrides": [
+		{
+			"files": "*.rs",
+			"options": {
+				"plugins": ["prettier-plugin-rust"]
+			}
+		}
+	]
 }
