--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-	"name": "tauri-nextjs-template",
+	"name": "kgc-toolkit",
 	"private": true,
-	"version": "0.2.0",
+	"version": "0.0.2",
 	"type": "module",
+	"author": {
+		"name": "nowl-it",
+		"email": "thh241005@gmail.com",
+		"url": "https://github.com/nowl-it"
+	},
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
@@ -24,21 +29,28 @@
 		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.85.5",
 		"@tauri-apps/api": "^2.7.0",
 		"@tauri-apps/plugin-dialog": "~2",
 		"@tauri-apps/plugin-opener": "^2.4.0",
-		"@types/simple-icons": "^5.21.1",
+		"@tauri-apps/plugin-store": "~2.4.0",
+		"@tauri-apps/plugin-updater": "~2.9.0",
 		"class-variance-authority": "^0.7.1",
+		"client-only": "^0.0.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.525.0",
 		"next": "^15.4.2",
 		"next-themes": "^0.4.6",
 		"prettier": "^3.6.2",
+		"prettier-plugin-organize-imports": "^4.2.0",
+		"prettier-plugin-rust": "^0.1.9",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.62.0",
+		"react-resizable-panels": "^3.0.5",
 		"simple-icons": "^15.12.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
