--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@tanstack/react-query": "^5.85.5",
 		"@tauri-apps/api": "^2.7.0",
 		"@tauri-apps/plugin-dialog": "~2",
-		"@tauri-apps/plugin-opener": "^2.4.0",
+		"@tauri-apps/plugin-opener": "~2",
 		"@tauri-apps/plugin-store": "~2.4.0",
 		"@tauri-apps/plugin-updater": "~2.9.0",
 		"class-variance-authority": "^0.7.1",
