--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "kgc-toolkit",
 	"private": true,
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"type": "module",
 	"author": {
 		"name": "nowl-it",
@@ -30,6 +30,7 @@
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-menubar": "^1.1.16",
 		"@radix-ui/react-progress": "^1.1.7",
+		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slider": "^1.3.6",
